@@ -3,7 +3,7 @@
 use warnings;
 use strict;
 
-use Test::More tests => 6;
+use Test::More tests => 8;
 
 use Carp::Assert::More;
 
@@ -11,6 +11,8 @@ use constant PASS => 1;
 use constant FAIL => 2;
 
 my @cases = (
+    [ undef,    FAIL ],
+    [ '',       FAIL ],
     [ 5,        FAIL ],
     [ 0,        FAIL ],
     [ 0.4,      FAIL ],
@@ -22,13 +24,14 @@ my @cases = (
 for my $case ( @cases ) {
     my ($val,$status) = @$case;
 
-    my $desc = "Checking \"$val\"";
+    my $desc = 'Checking ' . ($val // 'undef');
     eval { assert_negative( $val ) };
 
     if ( $status eq FAIL ) {
         like( $@, qr/Assertion.+failed/, $desc );
-    } else {
-        is( $@, "", $desc );
+    }
+    else {
+        is( $@, '', $desc );
     }
 }
 
