@@ -3,7 +3,7 @@
 use warnings;
 use strict;
 
-use Test::More tests => 6;
+use Test::More tests => 8;
 
 use Carp::Assert::More;
 
@@ -11,18 +11,20 @@ use constant PASS => 1;
 use constant FAIL => 2;
 
 my @cases = (
+    [ undef,    FAIL ],
+    [ '',       FAIL ],
     [ 5,        PASS ],
     [ 0,        PASS ],
     [ 0.4,      PASS ],
     [ -10,      FAIL ],
-    [ "dog",    PASS ],
+    [ 'dog',    FAIL ],
     [ "14.",    PASS ],
 );
 
 for my $case ( @cases ) {
     my ($val,$status) = @$case;
 
-    my $desc = "Checking \"$val\"";
+    my $desc = 'Checking ' . ($val // 'undef');
     eval { assert_nonnegative( $val ) };
 
     if ( $status eq FAIL ) {
